force-app/main/default/objects/Outreach__c/Outreach__c.object-meta.xml
<CustomObject>
    <label>Outreach</label>
    <nameField>
        <displayFormat>ON-{0000}</displayFormat>
        <label>Outreach Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreachs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>