force-app/main/default/objects/Outreach__c/fields/Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Communication_Method__c</fullName>
    <label>Communication Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>