force-app/main/default/objects/Outreach__c/fields/Date_of_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Outreach__c</fullName>
    <label>Date of Outreach</label>
    <type>DateTime</type>
</CustomField>