force-app/main/default/objects/Outreach__c/validationRules/date_can_not_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>date_can_not_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Date_of_Outreach__c)),
 (Date_of_Outreach__c &lt; NOW())
)</errorConditionFormula>
    <errorDisplayField>Date_of_Outreach__c</errorDisplayField>
    <errorMessage>date can not be in the past</errorMessage>
</ValidationRule>