force-app/main/default/objects/Outreach__c/validationRules/duration_can_not_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>duration_can_not_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Duration__c)),
 (Duration__c &lt; 0)
)</errorConditionFormula>
    <errorDisplayField>Duration__c</errorDisplayField>
    <errorMessage>duration can not be negative</errorMessage>
</ValidationRule>